# typst-qr

./: .gitignore  Cargo.toml  LICENSE  Readme.md  example.typ
src/: lib.rs
