[package]
name = "typst-qr"
version = "0.1.0"
edition = "2021"
authors = ["Icxolu <10486322+Icxolu@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
minicbor = { version = "0.19.1", features = ["derive"] }
qrcode-rs = "0.1.2"
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol", rev = "0e4bfded1986b13c217f3c80032c68b28f9e448a" }

[profile.release]
lto = true          # Enable link-time optimization
strip = true        # Strip symbols from binary*
opt-level = 'z'     # Optimize for size
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
